not yet finished

--- a/index.html
+++ b/index.html
@@ -3040,8 +3040,7 @@
                                                                                                         </div>
                                                                                                         <div
                                                                                                             class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                                                                            <a
-                                                                                                                class="elementor-cta__button elementor-button elementor-size-sm" href="sections\health care.html">
+                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm" href="sections\health care.html" target="_blank">
                                                                                                                 <span
                                                                                                                     class="elementor-button-content-wrapper">
                                                                                                                     <span
