gallery section remaining
photos of each campaign not yet uploaded to the webpage of the campaign

--- a/sections/awladna fe einena/awladna fe einena.html
+++ b/sections/awladna fe einena/awladna fe einena.html
@@ -2338,15 +2338,27 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>باكورة نشاط صناع الخير ،استهدفت مواجهة واحد من أخطر مسببات الأمراض في مصر، وهو
-                                                            فيروس سى .
-                                                        </p>
-                                                        <p>وقد كان ذلك من خلال تنظيم قوافل جابت قرى ونجوع محافظات مصر وقامت بإجراء تحاليل الفيروس للأهالي بالمجان وساعدت في حصول من ثبت إيجابيته للإصابة بالفيروس على العلاج.
-                                                        </p>
-                                                        <p>640 ألف مواطن تم تمكينهم من معرفة إذا ما كانوا مصابين بالفيروس من عدمه.
-                                                        </p>
-                                                        <p>80 ألف مواطن مصاب بالفيروس تم مساعدتهم للحصول على الع اج والشفاء بحمد لله بالتعاون مع المجالس الطبية المتخصصة بوزارة الصحة.
-                                                        </p>
+                                                        <p>مبادرة طموحة استهدفت محاربة التسرب
+                                                            من التعليم من خلال ان يتمتع التلميذ
+                                                            الصغير بصحة وعافية داخل فصله تمكنه
+                                                            من التحصيل بشكل أفضل، خاصةً في
+                                                            القرى الأشد احتياجًا ، ومن خ ال الاستعانة
+                                                            بأفضل المؤسسات الطبية المتخصصة
+                                                            في مجال طب العيون، ومن خ ال التعاون
+                                                            مع أكبر استشاريي طب الأطفال بجامعة
+                                                            القاهرة، وعدد من أكبر المعامل المتخصصة
+                                                            في إجراء التحاليل نظمت صناع الخير -من
+                                                            خلال مبادرة “أولادنا في عنينا “ - سلسلة
+                                                            قوافل داخل مدارس القرى الأكثر احتياجًا
+                                                            للكشف عن الأنيميا والسكري والعيون.
+                                                            جابت قوافل مبادرة “أولادنا في عنينا” عددًا
+                                                            كبيرًا من مدارس القرى الأشد احتياجًا
+                                                            في محافظات الفيوم والقاهرة وجنوب
+                                                            سيناء والبحر الأحمر، حيث نجحت المبادرة
+                                                            في رجوع أكثر من 40% من المتسربين من
+                                                            التعليم في المدارس المستهدفة إلى
+                                                            فصول الدراسة مرة أخرى.
+                                                            </p>
                                                         <blockquote>
                                                             <p>“When I give food to the poor, they call me a saint. When I ask why the poor have no food, they call me a communist.”<br /> <cite>The Gutenberg Team</cite></p>
                                                         </blockquote>
