--- a/sections/einak fe einena/einak fe einena.html
+++ b/sections/einak fe einena/einak fe einena.html
@@ -2338,14 +2338,10 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>باكورة نشاط صناع الخير ،استهدفت مواجهة واحد من أخطر مسببات الأمراض في مصر، وهو
-                                                            فيروس سى .
-                                                        </p>
-                                                        <p>وقد كان ذلك من خلال تنظيم قوافل جابت قرى ونجوع محافظات مصر وقامت بإجراء تحاليل الفيروس للأهالي بالمجان وساعدت في حصول من ثبت إيجابيته للإصابة بالفيروس على العلاج.
-                                                        </p>
-                                                        <p>640 ألف مواطن تم تمكينهم من معرفة إذا ما كانوا مصابين بالفيروس من عدمه.
-                                                        </p>
-                                                        <p>80 ألف مواطن مصاب بالفيروس تم مساعدتهم للحصول على الع اج والشفاء بحمد لله بالتعاون مع المجالس الطبية المتخصصة بوزارة الصحة.
+                                                        <p>مع بداية عام 2018 م أطلقت صناع الخير مبادرة إنسانية رائدة جديدة تهدف إلى الحد من مسببات العمى، وذلك من خلال الوصول بفرق طبية متخصصة للقرى والكشف على عيون الأهالي وصرف الأدوية وعمل مقاسات للنظارات تمهيدًا لتوزيعها لاحقًا، وتشخيص الاحتياج لإجراء جراحات عيون، وإجرائها في أكبر المراكز الطبية
+                                                            المتخصصة في العيون. كل ذلك بالمجان تماما.
+                                                            </p>
+                                                        <p>واستهدفت المبادرة الوصول إلى كل القرى الأشد احتياجًا في كل محافظات الجمهورية.
                                                         </p>
                                                         <blockquote>
                                                             <p>“When I give food to the poor, they call me a saint. When I ask why the poor have no food, they call me a communist.”<br /> <cite>The Gutenberg Team</cite></p>
