--- a/sections/kadm sa7e7/kadam sa7e7.html
+++ b/sections/kadm sa7e7/kadam sa7e7.html
@@ -2338,14 +2338,10 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>باكورة نشاط صناع الخير ،استهدفت مواجهة واحد من أخطر مسببات الأمراض في مصر، وهو
-                                                            فيروس سى .
+                                                        <p>أحدث مبادرات “صناع الخير” مبادرة “قدم صحيح”، التي تطلقها تحت رعاية رئاسة مجلس الوزراء، وبالتعاون مع اللجنة الطبية العليا ولجنة الاستغاثات الطبية بالمجلس، وبإشراف ودعم وزارة التضامن الاجتماعي، وبالشراكة مع عدد من الجامعات المصرية لتقديم خدمات طبية ذات جودة- بالمجان- لمرضى القدم السكري غير القادرين ، ما يدعم الحماية من بتر القدم وتقديم خدمات التعامل الطبي للحالات التي بُترت قدمها فعليا </p>
+                                                        <p>تقوم المؤسسة بتجهيز وحدات خاصة  بكافة التجهيزات الطبية اللازمة، وإمدادها بالمستلزمات اللازمة للغيار على الجروح وتقرحات القدم السكري للمرضى غير القادرين ممن لم يشملهم التأمين الصحي أو العلاج على نفقة الدولة، وذلك حسب احتياجات الغرفة.
                                                         </p>
-                                                        <p>وقد كان ذلك من خلال تنظيم قوافل جابت قرى ونجوع محافظات مصر وقامت بإجراء تحاليل الفيروس للأهالي بالمجان وساعدت في حصول من ثبت إيجابيته للإصابة بالفيروس على العلاج.
-                                                        </p>
-                                                        <p>640 ألف مواطن تم تمكينهم من معرفة إذا ما كانوا مصابين بالفيروس من عدمه.
-                                                        </p>
-                                                        <p>80 ألف مواطن مصاب بالفيروس تم مساعدتهم للحصول على الع اج والشفاء بحمد لله بالتعاون مع المجالس الطبية المتخصصة بوزارة الصحة.
+                                                        <p>“صناع الخير” ستقدم كافة البرامج التوعوية لمرضى القدم السكري، والتي تتضمن طرق العناية اليومية والفحص الذاتي المنزلي وطرق الغيار الصحيحة، طبق لخطط الع اج من الطبيب المختص.
                                                         </p>
                                                         <blockquote>
                                                             <p>“When I give food to the poor, they call me a saint. When I ask why the poor have no food, they call me a communist.”<br /> <cite>The Gutenberg Team</cite></p>
