--- a/sections/le masr/le masr.html
+++ b/sections/le masr/le masr.html
@@ -2338,14 +2338,15 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>باكورة نشاط صناع الخير ،استهدفت مواجهة واحد من أخطر مسببات الأمراض في مصر، وهو
-                                                            فيروس سى .
+                                                        <p>مبادرة "لمصر.. اطفال مصر مستقبل مصر " 
                                                         </p>
-                                                        <p>وقد كان ذلك من خلال تنظيم قوافل جابت قرى ونجوع محافظات مصر وقامت بإجراء تحاليل الفيروس للأهالي بالمجان وساعدت في حصول من ثبت إيجابيته للإصابة بالفيروس على العلاج.
+                                                        <p>لدعم صحة أطفال المدارس  
                                                         </p>
-                                                        <p>640 ألف مواطن تم تمكينهم من معرفة إذا ما كانوا مصابين بالفيروس من عدمه.
+                                                        <p>مبادرة " لمصر ..اطفال مصر مستقبل مصر"  لدعم صحة اطفال المدارس اطلقتها مؤسسة صناع الخير للتنمية بالتعاون مع مؤسسة البنك التجاري الدولي بهدف تقديم الخدمات الطبية ذات الجودة لطلاب جميع المدارس الابتدائية والإعدادية في نطاق جغرافى واحد وهو مركزي قوص والوقف بقنا   
                                                         </p>
-                                                        <p>80 ألف مواطن مصاب بالفيروس تم مساعدتهم للحصول على الع اج والشفاء بحمد لله بالتعاون مع المجالس الطبية المتخصصة بوزارة الصحة.
+                                                        <p> المبادرة يتم تنفيذها تحت رعاية دولة رئيس مجلس الوزراء و برعاية ودعم من الوزيرة نيفين قباج وزيرة التضامن الإجتماعي وبالتعاون مع أستاذة كلية الطب بجامعة جنوب الوادي ومديرية الصحة بقنا.
+                                                        </p>
+                                                        <p>تتنوع الخدمات الطبية المقدمة لتشمل مواجهة جميع الأمراض والمشكلات الصحية التى تأثر على تحصيل الطالب دخل الفصل الدراسى وتلك التى تهدد حياته وتتنوع هذه الخدمات ما بين الكشف على أمراض العيون وصرف القطرات العلاجية وعمل النظارات الطبية وإجراء العمليات الجراحية وعمل التحاليل اللازمة في مجال الانميا والسكر وتضم في فريق عملها أطباء الاطفال تخصصات القلب والباطنة والجلدية فضلا عن استهداف نشر التوعية بطرق الوقاية من الإصابة بالأمراض بشكل عام بالاضافة الى تدريب وتأهيل شباب الاطباء في محافظة قنا للقيام بدورهم في الاكتشاف المبكر للمشكلات الصحية للأطفال واحدث طرق علاجها عالمياً
                                                         </p>
                                                         <blockquote>
                                                             <p>“When I give food to the poor, they call me a saint. When I ask why the poor have no food, they call me a communist.”<br /> <cite>The Gutenberg Team</cite></p>
