--- a/index.html
+++ b/index.html
@@ -2642,7 +2642,7 @@
 
                                                                                                         </div>
                                                                                                         <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm" href="sections\eltakmin-eliktma3y.html" target="_blank">
+                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm" href="sections\eltamkin-eliktma3y.html" target="_blank">
                                                                                                                 <span class="elementor-button-content-wrapper">
                                                                                                                     <span
                                                                                                                         class="elementor-button-icon elementor-align-icon-left elementor-button-icon elementor-align-icon-left">
@@ -2731,7 +2731,7 @@
 
                                                                                                         </div>
                                                                                                         <div class="elementor-cta__button-wrapper elementor-cta__content-item elementor-content-item ">
-                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm" href="sections\eltakmin-eliktysady.html" target="_blank">
+                                                                                                            <a class="elementor-cta__button elementor-button elementor-size-sm" href="sections\eltamkin-eliktsady.html" target="_blank">
                                                                                                                 <span class="elementor-button-content-wrapper">
                                                                                                                     <span
                                                                                                                         class="elementor-button-icon elementor-align-icon-left elementor-button-icon elementor-align-icon-left">
