--- a/sections/sona3-eltanmya/sona3-eltanmya.html
+++ b/sections/sona3-eltanmya/sona3-eltanmya.html
@@ -2678,65 +2678,25 @@
                                                         <!-- Full-width images with number and caption text -->
                                                         <div class="mySlides fade">
                                                             <div class="numbertext">1 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img1.jpeg" style="width:100%">
+                                                            <img src="..\..\wp-content\campaign gallery\صناع التنمية\img1.jpeg" style="width:100%">
                                                             <div class="text">Caption one</div>
                                                         </div>
 
                                                         <div class="mySlides fade">
                                                             <div class="numbertext">2 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img2.jpeg" style="width:100%">
+                                                            <img src="..\..\wp-content\campaign gallery\صناع التنمية\img2.jpeg" style="width:100%">
                                                             <div class="text">Caption Two</div>
                                                         </div>
 
                                                         <div class="mySlides fade">
                                                             <div class="numbertext">3 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img3.jpeg" style="width:100%">
+                                                            <img src="..\..\wp-content\campaign gallery\صناع التنمية\img3.jpeg" style="width:100%">
                                                             <div class="text">Caption Three</div>
                                                         </div>
                                                         <div class="mySlides fade">
                                                             <div class="numbertext">4 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img4.jpg" style="width:100%">
+                                                            <img src="..\..\wp-content\campaign gallery\صناع التنمية\img4.jpg" style="width:100%">
                                                             <div class="text">Caption four</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">5 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img5.jpeg" style="width:100%">
-                                                            <div class="text">Caption five</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">6 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img6.jpeg" style="width:100%">
-                                                            <div class="text">Caption six</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">7 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img7.jpg" style="width:100%">
-                                                            <div class="text">Caption seven</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">8 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img8.jpg" style="width:100%">
-                                                            <div class="text">Caption eight</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">9 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img9.jpeg" style="width:100%">
-                                                            <div class="text">Caption nine</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">10 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img10.jpeg" style="width:100%">
-                                                            <div class="text">Caption ten</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">11 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img11.jpeg" style="width:100%">
-                                                            <div class="text">Caption eleven</div>
-                                                        </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">12 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\عنيك في عينينا صور\img12.jpeg" style="width:100%">
-                                                            <div class="text">Caption twelve</div>
                                                         </div>
 
                                                         <!-- Next and previous buttons -->
@@ -2751,14 +2711,7 @@
                                                         <span class="dot" onclick="currentSlide(2)"></span>
                                                         <span class="dot" onclick="currentSlide(3)"></span>
                                                         <span class="dot" onclick="currentSlide(4)"></span>
-                                                        <span class="dot" onclick="currentSlide(5)"></span>
-                                                        <span class="dot" onclick="currentSlide(6)"></span>
-                                                        <span class="dot" onclick="currentSlide(7)"></span>
-                                                        <span class="dot" onclick="currentSlide(8)"></span>
-                                                        <span class="dot" onclick="currentSlide(9)"></span>
-                                                        <span class="dot" onclick="currentSlide(10)"></span>
-                                                        <span class="dot" onclick="currentSlide(11)"></span>
-                                                        <span class="dot" onclick="currentSlide(12)"></span>
+
                                                     </div>
 
                                                 </div>
