--- a/sections/mrakb-elrizk/mrakb-elrizk.html
+++ b/sections/mrakb-elrizk/mrakb-elrizk.html
@@ -2654,8 +2654,14 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>مع بداية عام 2018 م أطلقت صناع الخير مبادرة إنسانية رائدة جديدة تهدف إلى الحد من مسببات العمى، وذلك من خلال الوصول بفرق طبية متخصصة للقرى والكشف على عيون الأهالي وصرف الأدوية وعمل مقاسات للنظارات
-                                                            تمهيدًا لتوزيعها لاحقًا، وتشخيص الاحتياج لإجراء جراحات عيون، وإجرائها في أكبر المراكز الطبية المتخصصة في العيون. كل ذلك بالمجان تماما.
+                                                        <p> ا اطلقت المؤسسة مبادراتها "مراكب الرزق " لدعم صغار الصيادين فى تأمين مصدر دخل اوفر لهم من خلال تحفيزهم على تطوير حرفتهم بتسليمهم مراكب صيد حديثة مزودة بمتور و معدات صيد حديثة كاملة استثمارا لمهاراتهم
+                                                            التى أكتسبوها فى الصيد. حرصت صناع الخير على أن يكون المستفيدين من مراكب الرزق ممن يعولون أسر كبيرة ولا يملكون مراكب صيد بالفعل ويملكون مهارات فى أحتراف مهنة الصيد أن المراكب التى تم تسليمها لصغار
+                                                            الصيادين ومعدات الصيد تم تسليمها لهم بالمجان تماماً بدات المؤسسة المبادرة بتسليم عدد 33 من صغار الصيادين من أهالى قرية السمطا بحرى مركز دشنا بمحافظة قنا 33مركب صيد وكامل أدوات الصيد تم تنظيم
+                                                            دورة للمستفيدين للتدريب على أساليب الصيد الحديثة و تم عمل ثلاجة حفظ الأسماك بالقرية حتى يتثنى لهم الحفاظ على ما يصطادونه حتى يتم تسويقه بالشكل الأفضل ومن قنا جنوبا الى بحيرة المنزلة شمالا حيث
+                                                            سلمت المؤسسة 11 مركب صيد ل 11 من صغار الصيادين بقرية العزيزة على بحيرة المنزلة بالدقهلية لصالح اهالي قرية المنصورية مركز دراو بأسوان احد اشد قرى اسوان احتياجا واحدي اكثر القرى التى تتعرض لموجات
+                                                            السيول وبحضور وزيرة التضامن الاجتماعي قامت صناع الخير بتزويد 30 من عوائل الاسر الاشد احتياج مشروعات مراكب صيد ومن اقصى الجنوب الى قلب دلتا مصر مركز شربين بمحافظة الدقهلية حيث قامت صناع الخير
+                                                            بتسليم 30 من أهالي قرية بساط كريم الدين مراكب صيد حديثة مع انشاء ثلاجة بالقرية لحفظ الاسماك
+
                                                         </p>
                                                         <p>واستهدفت المبادرة الوصول إلى كل القرى الأشد احتياجًا في كل محافظات الجمهورية.
                                                         </p>
