--- a/sections/mrakiz-istdama/mrakiz-istdama.html
+++ b/sections/mrakiz-istdama/mrakiz-istdama.html
@@ -2654,8 +2654,11 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>مع بداية عام 2018 م أطلقت صناع الخير مبادرة إنسانية رائدة جديدة تهدف إلى الحد من مسببات العمى، وذلك من خلال الوصول بفرق طبية متخصصة للقرى والكشف على عيون الأهالي وصرف الأدوية وعمل مقاسات للنظارات
-                                                            تمهيدًا لتوزيعها لاحقًا، وتشخيص الاحتياج لإجراء جراحات عيون، وإجرائها في أكبر المراكز الطبية المتخصصة في العيون. كل ذلك بالمجان تماما.
+                                                        <p>مركز استدامة لتنمية وتمكين المرأة الريفية المصرية انشاته صناع الخير بقرية نزلة الشوبك بالبدرشين بهدف العمل على تقديم اشكال متعددة من الدعم لشرائح المرأة الريفية وبخاصة المرأة المعيلة للنهوض بها اقتصاديا
+                                                            واجتماعيا منها خدمات التدريب والانتاج للحرف اليدوية والتراثية (منتجات اخميم من المنسوجات اليدوية والكليم ) حيث يحتوى المركز على عدد 6 انوال لتدريب السيدات عليها ومعرض للمنتجات يقدم المركز خدمات
+                                                            دعم السيدات الريفيات فى محو اميتهم عبر قسم مجهز بالمركز يحوي القسم 20 دسك تعليميى يقدم المركز خدمات رفع الوعى بالقضايا الحياتية من خلال تنظيم ندوات توعية و برامج ودورات تدريبة على ادارة المشروعات
+                                                            واستثمار الوقت والتنمية البشرية
+
                                                         </p>
                                                         <p>واستهدفت المبادرة الوصول إلى كل القرى الأشد احتياجًا في كل محافظات الجمهورية.
                                                         </p>
