--- a/sections/msan3-elsgad/msan3-elsgad.html
+++ b/sections/msan3-elsgad/msan3-elsgad.html
@@ -2654,8 +2654,12 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>مع بداية عام 2018 م أطلقت صناع الخير مبادرة إنسانية رائدة جديدة تهدف إلى الحد من مسببات العمى، وذلك من خلال الوصول بفرق طبية متخصصة للقرى والكشف على عيون الأهالي وصرف الأدوية وعمل مقاسات للنظارات
-                                                            تمهيدًا لتوزيعها لاحقًا، وتشخيص الاحتياج لإجراء جراحات عيون، وإجرائها في أكبر المراكز الطبية المتخصصة في العيون. كل ذلك بالمجان تماما.
+                                                        <p>مصنع دار السلام للسجاد اليدوي انشات مؤسسة صناع الخير للتنمية "مصنع دار السلام للسجاد اليدوي " بالفيوم ضمن جهود تنفيذ اهداف المبادرة الرئاسية حياة كريمة وبهدف خلق فرص عمل غير تقليدية للأسر المعيلة
+                                                            وبخاصة السيدات اختارت صناع الخير صناعة السجاد اليدوي لكونها واحدة من الصناعات كثيفة الاحتياج للعمالة وتحظى برواج عالمى وتساعد على تحقيق هدف قومى عند التصدير وهو رفع شعار صنع في مصر عالميا ووقع
+                                                            الاختيار على قرية دار السلام بالفيوم ليتم بها التنفيذ كونها احد اشد قرى محافظة الفيوم احتياجا ولا يوجد للأهالي فرص تشغيل تقاطع ذلك مع سعى صناع الخير لتنمية واعادة اعمار القرية والعودة بها الى
+                                                            فكرة القرية المنتجة ذات المنتج الواحد لكى تتفرد في هذا المنتج وتتفوق ليحظى منتجها بفرص تسويقية عالية محليا وعالميا المصنع يعمل به اكثر من 200 من السيدات المعيلات والفتيات من اهالى قرية دار السلام
+                                                            على 30 نول كما يشمل المصنع وحدة صباغة وتجهيز وتجفيف وقص يوفر المصنع فرص عمل تكميلية لعدد كبير من أهالي القرية تم تدريبه جميع العاملات في المصنع تدريب مكثف على احتراف صناعة السجاد
+
                                                         </p>
                                                         <p>واستهدفت المبادرة الوصول إلى كل القرى الأشد احتياجًا في كل محافظات الجمهورية.
                                                         </p>
