--- a/sections/sona3-eltanmya/sona3-eltanmya.html
+++ b/sections/sona3-eltanmya/sona3-eltanmya.html
@@ -2654,8 +2654,8 @@
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>مع بداية عام 2018 م أطلقت صناع الخير مبادرة إنسانية رائدة جديدة تهدف إلى الحد من مسببات العمى، وذلك من خلال الوصول بفرق طبية متخصصة للقرى والكشف على عيون الأهالي وصرف الأدوية وعمل مقاسات للنظارات
-                                                            تمهيدًا لتوزيعها لاحقًا، وتشخيص الاحتياج لإجراء جراحات عيون، وإجرائها في أكبر المراكز الطبية المتخصصة في العيون. كل ذلك بالمجان تماما.
+                                                        <p>إنشاء عدد مصنعين «السجاد اليدوي » وتدريب أهل القرية على إتقان هذه المهنة، وتعزيز فكرة الاستدامة لهم.
+
                                                         </p>
                                                         <p>واستهدفت المبادرة الوصول إلى كل القرى الأشد احتياجًا في كل محافظات الجمهورية.
                                                         </p>
