--- a/sections/tawsyle-myah-nakya/tawsyle-myah-nakya.html
+++ b/sections/tawsyle-myah-nakya/tawsyle-myah-nakya.html
@@ -2648,14 +2648,14 @@
                                                     sizes="(max-width: 900px) 100vw, 900px" /></div>
                                             <div id="give-form-single-tab" class="give-form-tabs">
                                                 <ul>
-                                                    <li><a href="#tabs-1">Description</a></li>
-                                                    <li><a href="#tabs-3">Video</a></li>
-                                                    <li><a href="#tabs-4">Gallery</a></li>
+                                                    <li><a href="#tabs-1">الوصف</a></li>
+                                                    <li><a href="#tabs-3">فديو</a></li>
+                                                    <li><a href="#tabs-4">المعرض</a></li>
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
-                                                        <p>مع بداية عام 2018 م أطلقت صناع الخير مبادرة إنسانية رائدة جديدة تهدف إلى الحد من مسببات العمى، وذلك من خلال الوصول بفرق طبية متخصصة للقرى والكشف على عيون الأهالي وصرف الأدوية وعمل مقاسات للنظارات
-                                                            تمهيدًا لتوزيعها لاحقًا، وتشخيص الاحتياج لإجراء جراحات عيون، وإجرائها في أكبر المراكز الطبية المتخصصة في العيون. كل ذلك بالمجان تماما.
+                                                        <p>تركيب وصلات مياه نقية للمنازل في بعض القرى والنجوع الأكثر احتياجًا.
+
                                                         </p>
                                                         <p>واستهدفت المبادرة الوصول إلى كل القرى الأشد احتياجًا في كل محافظات الجمهورية.
                                                         </p>
