--- a/sections/msan3-elsgad/msan3-elsgad.html
+++ b/sections/msan3-elsgad/msan3-elsgad.html
@@ -2648,9 +2648,9 @@
                                                     sizes="(max-width: 900px) 100vw, 900px" /></div>
                                             <div id="give-form-single-tab" class="give-form-tabs">
                                                 <ul>
-                                                    <li><a href="#tabs-1">Description</a></li>
-                                                    <li><a href="#tabs-3">Video</a></li>
-                                                    <li><a href="#tabs-4">Gallery</a></li>
+                                                    <li><a href="#tabs-1">الوصف</a></li>
+                                                    <li><a href="#tabs-3">فديو</a></li>
+                                                    <li><a href="#tabs-4">المعرض</a></li>
                                                 </ul>
                                                 <div id="tabs-1">
                                                     <div id="give-form-content-61" class="give-form-content-wrap give_pre_form-content" dir="rtl">
@@ -2697,11 +2697,7 @@
                                                             <img src="..\..\wp-content\campaign gallery\مصانع السجاد\img3.jpeg" style="width:100%">
                                                             <div class="text">Caption Three</div>
                                                         </div>
-                                                        <div class="mySlides fade">
-                                                            <div class="numbertext">4 / 12</div>
-                                                            <img src="..\..\wp-content\campaign gallery\مصانع السجاد\img4.jpeg" style="width:100%">
-                                                            <div class="text">Caption four</div>
-                                                        </div>
+
 
 
                                                         <!-- Next and previous buttons -->
@@ -2715,7 +2711,6 @@
                                                         <span class="dot" onclick="currentSlide(1)"></span>
                                                         <span class="dot" onclick="currentSlide(2)"></span>
                                                         <span class="dot" onclick="currentSlide(3)"></span>
-                                                        <span class="dot" onclick="currentSlide(4)"></span>
 
                                                     </div>
 
